<resources>
    <string name="app_name">loginActivation</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="save">Save</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="student_number">Student number</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="teoria">Teoria</string>
    <string name="praktik">Praktik</string>
</resources>
