<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainpageback"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="280dp"
        android:hint="@string/user_name"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/edittext_cursor" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@drawable/edittext_cursor" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:buttonTint="@color/white"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView_forgot_password"
            android:layout_width="135dp"
            android:layout_height="20dp"
            android:paddingLeft="75dp"
            android:text="Register"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>