<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/mainpageback">

    <EditText
        android:id="@+id/editText_username_r"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="280dp"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:hint="@string/user_name"
        android:textColorHint="@color/white"/>

    <EditText
        android:id="@+id/editText_password_r"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/editText_confirm_password_r"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textCursorDrawable="@drawable/edittext_cursor"
        android:hint="status"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_save_r"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:background="@drawable/button"/>

</LinearLayout>