<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_reg_studentsActivity"
    android:background="@drawable/back">

    <GridLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_row="0"
        android:layout_column="0">

        <ImageButton
            android:id="@+id/student_photo"
            android:layout_width="134dp"
            android:layout_height="175dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="163dp"
            android:background="@drawable/photo"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <Spinner
            android:id="@+id/fac_sp"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="45dp" />

        <Spinner
            android:id="@+id/dep_sp"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="20dp"/>


    </GridLayout>

    <GridLayout
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1">

        <EditText
            android:id="@+id/student_number"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="30dp"
            android:hint="@string/student_number"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/name_student"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/student_surname"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:hint="@string/surname"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


        <EditText
            android:id="@+id/password_student"
            android:layout_width="161dp"
            android:layout_height="40dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@drawable/edittext_cursor" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:text="Faculty"
            android:textColor="@color/white" />


        <TextView
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:text="Department"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/submit_student"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/send_button"
            android:drawableLeft="@drawable/ic_send_black_24dp"
            android:padding="15dp"
            android:text="Submit"
            android:textSize="9dp" />

    </GridLayout>


</GridLayout>